Change from_surface default value to true

BUG=714058

Review-Url: https://codereview.chromium.org/2871113002
Cr-Commit-Position: refs/heads/master@{#474207}

Former-commit-id: b7b00695911984b3be8f9e7894ac84123136e38e