headless/app/headless_shell.cc
@@ -366,7 +366,7 @@ void HeadlessShell::OnExpressionResult(
 
 void HeadlessShell::CaptureScreenshot() {
   devtools_client_->GetPage()->GetExperimental()->CaptureScreenshot(
-      page::CaptureScreenshotParams::Builder().SetFromSurface(true).Build(),
+      page::CaptureScreenshotParams::Builder().Build(),
       base::Bind(&HeadlessShell::OnScreenshotCaptured,
                  weak_factory_.GetWeakPtr()));
 }
