headless/lib/headless_web_contents_browsertest.cc
@@ -161,7 +161,7 @@ class HeadlessWebContentsScreenshotTest
 
   void OnPageSetupCompleted(std::unique_ptr<runtime::EvaluateResult> result) {
     devtools_client_->GetPage()->GetExperimental()->CaptureScreenshot(
-        page::CaptureScreenshotParams::Builder().SetFromSurface(true).Build(),
+        page::CaptureScreenshotParams::Builder().Build(),
         base::Bind(&HeadlessWebContentsScreenshotTest::OnScreenshotCaptured,
                    base::Unretained(this)));
   }
